--- a/src/template/base.html
+++ b/src/template/base.html
@@ -30,15 +30,15 @@
     <script>
         var google_api_key = "{{config.google_api_key}}";
     </script>
-    <script src="/javascript/grit.js" type="text/javascript"></script>
-    <script src="/javascript/action.js" type="text/javascript"></script>
-    <script src="/javascript/datasource.js" type="text/javascript"></script>
-    <script src="/javascript/alert.js" type="text/javascript"></script>
-    <script src="/javascript/form.js" type="text/javascript"></script>
-    <script src="/javascript/table.js" type="text/javascript"></script>
-    <script src="/javascript/treeview.js" type="text/javascript"></script>
-    <script src="/javascript/lookup.js" type="text/javascript"></script>
-    <script src="/javascript/geocode.js" type="text/javascript"></script>
+    <script src="/jscr/grit.js" type="text/javascript"></script>
+    <script src="/jscr/action.js" type="text/javascript"></script>
+    <script src="/jscr/datasource.js" type="text/javascript"></script>
+    <script src="/jscr/alert.js" type="text/javascript"></script>
+    <script src="/jscr/form.js" type="text/javascript"></script>
+    <script src="/jscr/table.js" type="text/javascript"></script>
+    <script src="/jscr/treeview.js" type="text/javascript"></script>
+    <script src="/jscr/lookup.js" type="text/javascript"></script>
+    <script src="/jscr/geocode.js" type="text/javascript"></script>
     <script>
         {% block javascript %}
         {% endblock javascript %}
