--- a/src/template/sweattrails/profile/view.html
+++ b/src/template/sweattrails/profile/view.html
@@ -9,6 +9,7 @@
 <st:tab code="profile" label="Profile">
     <st:form name="user" url="/json/user/{{key}}">
         <st:flag name="include_parts"/>
+        <st:field id="profile" type="title" text="User Profile"/>
         <st:field id="email" type="text" property="email" label="Email" readonly="true"/>
         <st:field id="display_name" type="text" property="display_name" label="Name" required="true"/>
         <st:field id="country" type="lookup" property="userprofile.country" label="Country" 
@@ -21,10 +22,16 @@
             <st:value text="Other" key="other"/>
         </st:field>
         <st:field id="height" type="length" property="userprofile.height" label="Height"/>
+        <st:field id="preferences" type="title" text="Preferences"/>
         <st:field id="units" type="lookup" property="userprofile.units" label="Units" presentationtype="radio">
             <st:value text="Metric" key="metric"/>
             <st:value text="Imperial" key="imperial"/>
         </st:field>
+        <st:field id="components" type="title" text="Components"/>
+        {% if object.weightmgmt is defined %}
+        <st:field id="weightmgmt" type="checkbox" property="userprofile.units" label="Weight Management" >
+        {% else %}
+        {% endif %}
 
         <st:footer>
             <st:action mode="view" label="Edit" action="edit"/>
@@ -34,9 +41,11 @@
     </st:form>
 </st:tab>
 
-<st:tab code="history" label="Health History">
+{% if object.weightmgmt is defined %}
+<st:tab code="weightmgmt" label="Health History">
     <st:table name="history" url="/json/history">
-        <st:parameter name="parent" value="{{key}}"/>
+        <st:parameter name="parent" value="{{object.weightmgmt.id()}}"/>
+        <st:submitparameter name="parent" value="{{object.weightmgmt.id()}}"/>
         <st:column label="Date" type="date" property="snapshotdate" select="true"/>
         <st:column label="Weight" type="weight" property="weight"/>
         <st:column label="Bodyfat %" property="bfPercentage" type="float" digits="1"/>
@@ -54,5 +63,27 @@
         <st:action label="Add" action="new"/>
     </st:table>
 </st:tab>
+{% endif %}
+
+{% if object.seizuremgmt is defined %}
+<st:tab code="seizuremgmt" label="Seizures">
+    <st:table name="seizurelog" url="/json/seizurelog">
+        <st:parameter name="parent" value="{{object.seizuremgmt.id()}}"/>
+        <st:submitparameter name="parent" value="{{object.seizuremgmt.id()}}"/>
+        <st:column label="Date/Time" type="datetime" property="timestamp" select="true"/>
+        <st:column label="Description" type="text" property="description"/>
+        <st:column label="Severity" type="integer" property="severity"/>
+        <st:dataform>
+            <st:field id="timestamp" type="datetime" property="timestamp" label="Date/Time"/>
+            <st:field id="description" type="text" property="description" label="Description"/>
+            <st:field id="severity" type="integer" property="severity" label="Severity"/>
+            <st:action mode="view" label="Edit" action="edit"/>
+            <st:action mode="new;edit" label="Save" action="save"/>
+            <st:action mode="view;new;edit" label="Cancel" action="cancel"/>
+        </st:dataform>
+        <st:action label="Add" action="new"/>
+    </st:table>
+</st:tab>
+{% endif %}
 
 {% endblock tabs %}
