--- a/src/template/sweattrails/profile/view.html
+++ b/src/template/sweattrails/profile/view.html
@@ -12,24 +12,24 @@
         <st:field id="profile" type="title" text="User Profile"/>
         <st:field id="email" type="text" property="email" label="Email" readonly="true"/>
         <st:field id="display_name" type="text" property="display_name" label="Name" required="true"/>
-        <st:field id="country" type="lookup" property="userprofile.country" label="Country" 
+        <st:field id="country" type="lookup" property="_userprofile.country" label="Country" 
                   url="/json/country" text="countryname" key="countrycode"/>
-        <st:field id="location" type="geocode" property="userprofile.location" label="Location"/>
-        <st:field id="dob" type="date" property="userprofile.dob" label="Birthdate"/>
-        <st:field id="gender" type="lookup" property="userprofile.gender" label="Gender" presentationtype="radio">
+        <st:field id="location" type="geocode" property="_userprofile.location" label="Location"/>
+        <st:field id="dob" type="date" property="_userprofile.dob" label="Birthdate"/>
+        <st:field id="gender" type="lookup" property="_userprofile.gender" label="Gender" presentationtype="radio">
             <st:value text="Female" key="female"/>
             <st:value text="Male" key="male"/>
             <st:value text="Other" key="other"/>
         </st:field>
-        <st:field id="height" type="length" property="userprofile.height" label="Height"/>
+        <st:field id="height" type="length" property="_userprofile.height" label="Height"/>
         <st:field id="preferences" type="title" text="Preferences"/>
-        <st:field id="units" type="lookup" property="userprofile.units" label="Units" presentationtype="radio">
+        <st:field id="units" type="lookup" property="_userprofile.units" label="Units" presentationtype="radio">
             <st:value text="Metric" key="metric"/>
             <st:value text="Imperial" key="imperial"/>
         </st:field>
         <st:field id="components" type="title" text="Components"/>
         <st:field id="weightmgmt" type="checkbox" property="weightmgmt" label="Weight Management"/>
-        <st:field id="weightmgmt" type="checkbox" property="seizuremgmt" label="Seizure Management"/>
+        <st:field id="seizuremgmt" type="checkbox" property="seizuremgmt" label="Seizure Management"/>
 
         <st:footer>
             <st:action mode="view" label="Edit" action="edit"/>
@@ -38,30 +38,6 @@
         </st:footer>
     </st:form>
 </st:tab>
-
-{% if object._weightmgmt is defined %}
-<st:tab code="weightmgmt" label="Health History">
-    <st:table name="history" url="/json/history">
-        <st:parameter name="parent" value="{{object._weightmgmt.id()}}"/>
-        <st:submitparameter name="parent" value="{{object._weightmgmt.id()}}"/>
-        <st:column label="Date" type="date" property="snapshotdate" select="true"/>
-        <st:column label="Weight" type="weight" property="weight"/>
-        <st:column label="Bodyfat %" property="bfPercentage" type="float" digits="1"/>
-        <st:column label="Waist" type="length" property="waist"/>
-        <st:column label="BMI" property="bmi" type="float" digits="2"/>
-        <st:dataform>
-            <st:field id="snapshotdate" type="date" property="snapshotdate" label="Date"/>
-            <st:field id="weight" type="weight" property="weight" label="Weight"/>
-            <st:field id="bodyfat" type="text" size="4" maxlength="5" property="bfPercentage" label="Bodyfat %"/>
-            <st:field id="waist" type="length" property="waist" label="Waist"/>
-            <st:action mode="view" label="Edit" action="edit"/>
-            <st:action mode="new;edit" label="Save" action="save"/>
-            <st:action mode="view;new;edit" label="Cancel" action="cancel"/>
-        </st:dataform>
-        <st:action label="Add" action="new"/>
-    </st:table>
-</st:tab>
-{% endif %}
 
 {% if object._seizuremgmt is defined %}
 <st:tab code="seizuremgmt" label="Seizures">
