--- a/src/template/base.html
+++ b/src/template/base.html
@@ -18,6 +18,14 @@
     </div>
 {% endmacro %}
 
+{% macro import_maps() %}
+    <script type="text/javascript">
+        L_PREFER_CANVAS = false;
+    </script>
+    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js" type="text/javascript"></script>
+    <script src="/jscr/map.js" type="text/javascript"></script>
+{% endmacro %}
+
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:st="http://www.sweattrails.com/html">
   <head>
     {% block head %}
@@ -25,11 +33,8 @@
     <link rel="stylesheet" type="text/css" href="/css/grizzle.css"/>
     <style type="text/css">
         {% block css %}
-	{% endblock css %}
+	    {% endblock css %}
     </style>
-    <script>
-        var google_api_key = "{{config.google_api_key}}";
-    </script>
     <script src="/jscr/grit.js" type="text/javascript"></script>
     <script src="/jscr/action.js" type="text/javascript"></script>
     <script src="/jscr/datasource.js" type="text/javascript"></script>
@@ -65,14 +70,11 @@
                                     <div class="navitem">{{ user.display_name|d(user.email) }}</div>
                                     <ul>
                                         <li>
-                                            <a class="navitem" onclick="st_show_form('changepwd')" href="#">Change Password</a></li>
+                                            <a class="navitem" onclick="st_show_form('changepwd')" href="#">Change Password</a>
+                                        </li>
                                         <li><a class="navitem" href="/profile">Profile</a></li>
                                         <li><a class="navitem" href="/">Settings</a></li>
-                                        <li>
-                                            <a class="navitem" href="{{urls['user']['logout'].url()|e}}">
-                                                {{urls['user']['logout'].label()}}
-                                            </a>
-                                        </li>
+                                        <li><a class="navitem" href="/logout">Logout</a></li>
                                     </ul>
                                 </li>
                                 <st:form name="changepwd" url="/um/changepwd" modal="true" onsubmitted="password_changed">
@@ -124,6 +126,10 @@
             <div id="mainpagewrapper" class="mainpagewrapper">
                 <div class="mainpage" id="mainpage">
                     {% block pagecontent %}
+                        <div id="mainpage">
+                            {% block mainpage %}
+                            {% endblock mainpage %}
+                        </div>
                         <div class="tabbox" id="tabbox">
                         </div>
                         <div class="pagebox" id="pagebox" width="100%">
@@ -134,8 +140,6 @@
                                 {% block tabs %}
                                 {% endblock tabs %}
                             </st:tabs>
-                            {% block mainpage %}
-                            {% endblock mainpage %}
                         </div>
                     {% endblock pagecontent %}
                 </div>
