Revive the web application. Can upload fit files now

--- a/src/template/base.html
+++ b/src/template/base.html
@@ -37,6 +37,7 @@
     </style>
     <script src="/jscr/grit.js" type="text/javascript"></script>
     <script src="/jscr/action.js" type="text/javascript"></script>
+    <script src="/jscr/request.js" type="text/javascript"></script>
     <script src="/jscr/datasource.js" type="text/javascript"></script>
     <script src="/jscr/alert.js" type="text/javascript"></script>
     <script src="/jscr/form.js" type="text/javascript"></script>
