--- a/src/template/sweattrails/session/session/list.html.j2
+++ b/src/template/sweattrails/session/session/list.html.j2
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html.j2" %}
 
 {% block imports %}
 <!-- <script src="/js/users.js" type="text/javascript"></script> -->
@@ -13,7 +13,7 @@
 </script>
 
 <st:tab code="sessions" label="Activities">
-    <st:form name="frm_upload_file" url="/st/upload" modal="true" mode="new" type="json" submit="upload">
+    <st:form name="upload_file" url="/st/upload" modal="true" mode="new" type="json" submit="upload">
         <st:field id="activity" type="file" label="Activity file(s)" required="true" multiple="false"/>
         <st:footer>
             <st:action mode="new" label="Upload" action="save"/>
@@ -23,10 +23,10 @@
     <st:table name="sessions" url="/json/session" debug="true">
         <st:sort name="start_time" descending="true"/>
         <st:header>
-            <st:action label="Upload" action="upload_file"/>
+            <st:action label="Upload" action="form" form="upload_file"/>
         </st:header>
         <st:column label="Date/time" type="datetime" property="start_time" width="25%" select="/st/activity/$key"/>
-        <st:column label="Distance" type="distance" property="distance" width="10%"/>
+        <st:column label="Distance" type="distance" digits="2" property="distance" width="10%"/>
         <st:column label="Time" type="time" property="duration" width="10%"/>
         <st:column label="Description" type="text" property="description" select="/st/activity/$key" width="55%"/>
     </st:table>
