--- a/src/css/grizzle.css
+++ b/src/css/grizzle.css
@@ -30,7 +30,7 @@ body {
 
 .tools {
     position: absolute;
-    top: /*1*/0px;
+    top: 0;
     right: 1em;
     color: white;
 }
@@ -48,7 +48,7 @@ nav ul {
     background: linear-gradient(top, #a30000 0%, #ff0000 100%);  
     background: -moz-linear-gradient(top, #a30000 0%, #ff0000 100%); 
     background: -webkit-linear-gradient(top, #a30000 0%, #ff0000 100%); 
-    box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+    box-shadow: 0 0 9px rgba(0,0,0,0.15);
     padding: 0 /*20px*/;
     border-radius: 10px;  
     list-style: none;
@@ -104,7 +104,7 @@ nav ul li .navitem:last-child {
 
 nav ul ul {
     background: #5f6975; 
-    border-radius: 0px; 
+    border-radius: 0;
     padding: 0;
     position: absolute; top: 100%;
 }
@@ -150,19 +150,19 @@ span.tab {
     padding-left: 10px;
     border-style: solid;
     border-width: thin;
-    border-radius: 5px 5px 0px 0px;
+    border-radius: 5px 5px 0 0;
 }
 
 span.tab_selected {
     background-color:  #A30000;
-    margin: 0px;
+    margin: 0;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-right: 10px;
     padding-left: 10px;
     border-style: solid;
     border-width: medium;
-    border-radius: 5px 5px 0px 0px;
+    border-radius: 5px 5px 0 0;
 }
 
 div.tabpage {
@@ -175,7 +175,7 @@ div.tabbox {
 
 div.pagebox {
     margin-top: 10px;
-    margin-left: 0px;
+    margin-left: 0;
     padding: 10px;
     border: thin solid;
     border-radius: 5px;
@@ -297,8 +297,8 @@ a.disabledmenulink {
     color: black;
     border: thin solid black;
     padding: 10px;
-    margin-left: 0px;
-    margin-top: 0px;
+    margin-left: 0;
+    margin-top: 0;
     margin-bottom: 5px;
     border-radius: 5px;
 }
@@ -310,7 +310,7 @@ a.disabledmenulink {
     border: thin solid black;
     padding: 10px;
     margin-left: -200px;
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 5px;
     border-radius: 5px;
 }
@@ -326,8 +326,8 @@ a.disabledmenulink {
 
 .overlay {
     position: absolute;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     width:100%;
     height:100%;
     text-align:center;
@@ -351,7 +351,7 @@ a.disabledmenulink {
     opacity: 1;
 }
 
-.modal::aftera {
+.modal::after {
     position: absolute;
     content: url("/image/error.png");
     right: -10px;
