--- a/src/template/base.html.j2
+++ b/src/template/base.html.j2
@@ -4,6 +4,10 @@
     <script src="/jscr/{{s}}.js" type="text/javascript"></script>
 {% endmacro %}
 
+{% macro import_css(css) %}
+    <link rel="stylesheet" href="{{css}}" />
+{% endmacro %}
+
 {% macro errorblock() %}
     <div id="errors" class="errors">
       {% for e in errors %}
@@ -19,6 +23,7 @@
 {% endmacro %}
 
 {% macro import_maps() %}
+    {{ import_css("https://unpkg.com/leaflet@1.0.3/dist/leaflet.css") }}
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js" type="text/javascript"></script>
     {{ import_script("map") }}
 {% endmacro %}
@@ -45,12 +50,12 @@
     <script src="/jscr/form.js" type="text/javascript"></script>
     <script src="/jscr/table.js" type="text/javascript"></script>
     <script src="/jscr/lookup.js" type="text/javascript"></script>
+    {% block imports %}
+    {% endblock %}
     <script type="text/javascript">
         {% block javascript %}
         {% endblock javascript %}
     </script>
-    {% block imports %}
-    {% endblock %}
     <title>
         {% block title %}
         {{app.application_name}}
