--- a/src/template/sweattrails/session/session/list.html.j2
+++ b/src/template/sweattrails/session/session/list.html.j2
@@ -1,7 +1,8 @@
 {% extends "base.html.j2" %}
 
 {% block imports %}
-<!-- <script src="/js/users.js" type="text/javascript"></script> -->
+    {{ import_script("sweattrails/sweattrails") }}
+    {{ import_script("sweattrails/session") }}
 {% endblock %}
 
 {% block tabs %}
