--- a/template/index.html.j2
+++ b/template/index.html.j2
@@ -8,7 +8,7 @@
 </st:tab>
 <st:tab code="hate" label="Haters gonna Hate">
    	<h1>Haters gonna Hate</h1>
-   	<img src="http://i3.kym-cdn.com/entries/icons/square/000/001/945/5008_9c00_420.gif"/>
+   	<img src="https://www.chykwest.com/wp-content/uploads/keep-calm-cause-haters-gonna-hate-5.png"/>
 </st:tab>
 
 {% endblock tabs %}
