--- a/css/grizzle.css
+++ b/css/grizzle.css
@@ -1,4 +1,4 @@
-/* 
+/*
     Document   : sweattrails
     Created on : 4-Mar-2012, 11:31:11 AM
     Author     : jan
@@ -6,7 +6,7 @@
         Basic sweattrails stylesheet
 */
 
-root { 
+root {
     display: block;
 }
 
@@ -17,7 +17,7 @@ body {
 }
 
 /*
-  Menu styling. 
+  Menu styling.
   See http://line25.com/tutorials/how-to-create-a-pure-css-dropdown-menu
 */
 
@@ -44,21 +44,21 @@ nav ul li:hover > ul {
 }
 
 nav ul {
-    background: #A30000; 
-    background: linear-gradient(top, #a30000 0%, #ff0000 100%);  
-    background: -moz-linear-gradient(top, #a30000 0%, #ff0000 100%); 
-    background: -webkit-linear-gradient(top, #a30000 0%, #ff0000 100%); 
+    background: #A30000;
+    background: linear-gradient(top, #a30000 0%, #ff0000 100%);
+    background: -moz-linear-gradient(top, #a30000 0%, #ff0000 100%);
+    background: -webkit-linear-gradient(top, #a30000 0%, #ff0000 100%);
     box-shadow: 0 0 9px rgba(0,0,0,0.15);
     padding: 0 /*20px*/;
-    border-radius: 10px;  
+    border-radius: 10px;
     list-style: none;
     position: relative;
     display: inline-table;
 }
 
 nav ul:after {
-    content: ""; 
-    clear: both; 
+    content: "";
+    clear: both;
     display: block;
 }
 
@@ -71,7 +71,7 @@ nav ul li:hover {
     background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
     background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
     background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
-    border-radius: 10px;  
+    border-radius: 10px;
 }
 
 nav ul li:hover .navitem:first-child {
@@ -85,11 +85,11 @@ nav ul li:hover .navitem:last-child {
 nav ul li:hover .navitem {
     color: white;
 }
-	
+
 nav ul li .navitem {
     display: block;
     padding: 5px 5px;
-    border-radius: 10px;  
+    border-radius: 10px;
     color: white;
     text-decoration: none;
 }
@@ -103,14 +103,14 @@ nav ul li .navitem:last-child {
 }
 
 nav ul ul {
-    background: #5f6975; 
+    background: #5f6975;
     border-radius: 0;
     padding: 0;
     position: absolute; top: 100%;
 }
 
 nav ul ul li {
-    float: none; 
+    float: none;
     border-top: 1px solid #6b727c;
     border-bottom: 1px solid #575f6a;
     position: relative;
@@ -119,13 +119,13 @@ nav ul ul li {
 nav ul ul li .navitem {
     padding: 15px 40px;
     color: #fff;
-}	
+}
 
 nav ul ul li .navitem:hover {
     background: #4b545f;
 }
 
-nav ul ul ul {  
+nav ul ul ul {
     position: absolute; left: 100%; top:0;
 }
 
@@ -382,4 +382,12 @@ div.treeview-daycare {
 .td.formlabel {
     text-align: right;
     width: auto;
+}
+
+tr.oddrow {
+    background-color: white;
+}
+
+tr.evenrow {
+    background-color: lightblue;
 }
