--- a/template/root.html.j2
+++ b/template/root.html.j2
@@ -42,7 +42,9 @@
         {% block css %}
         {% endblock css %}
     </style>
+    <script src="/jscr/util.js" type="text/javascript"></script>
     <script src="/jscr/grit.js" type="text/javascript"></script>
+    <script src="/jscr/tab.js" type="text/javascript"></script>
     <script src="/jscr/action.js" type="text/javascript"></script>
     <script src="/jscr/request.js" type="text/javascript"></script>
     <script src="/jscr/datasource.js" type="text/javascript"></script>
@@ -50,6 +52,7 @@
     <script src="/jscr/form.js" type="text/javascript"></script>
     <script src="/jscr/table.js" type="text/javascript"></script>
     <script src="/jscr/lookup.js" type="text/javascript"></script>
+    <script src="/jscr/grizzle.js" type="text/javascript"></script>
     {% block imports %}
     {% endblock %}
     <script type="text/javascript">
